Fix current server indicator on main navbar appearing on small screens

--- a/app/(main)/components/MainNavbar/styles.module.scss
+++ b/app/(main)/components/MainNavbar/styles.module.scss
@@ -57,6 +57,11 @@
     left: 50%;
     bottom: 0;
     background-color: var(--bg-contrast-100);
+    display: none;
+
+    @include large-screen {
+      display: block;
+    }
   }
 }
 
